kubernetes/prod/fail.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fail-lab
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
  namespace: fail-lab
spec:
  replicas: 2
  serviceName: app
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx
        volumeMounts:
        - mountPath: /data
          name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
