kubernetes/prod/perf.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: perf-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: perf-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: app
        image: nginx
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "50m"
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: perf-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      containers:
      - name: load
        image: nginx
