kubernetes/prod/storage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: storage-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: nginx
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: db-pvc
