kubernetes/prod/partial.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: partial-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: partial-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: partial-svc
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: partial-svc
spec:
  containers:
  - name: curl
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
