kubernetes/prod/prueba.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: net-debug
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: net-debug
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: net-debug
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: net-debug
spec:
  containers:
  - name: test
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
