kubernetes/prod/svc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: svc-bug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: svc-bug
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: svc-bug
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: svc-bug
spec:
  containers:
  - name: curl
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
