kubernetes/prod/project-x.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: project-x
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: project-x
  labels:
    project: x
spec:
  replicas: 2
  selector:
    matchLabels:
      project: x
  template:
    metadata:
      labels:
        project: x
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: project
                  operator: In
                  values:
                  - x
              topologyKey: kubernetes.io/hostname
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
  namespace: project-x
  labels:
    app: logger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: logs
          mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: myclaim
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "infra"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - minikube-m04
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - logger
              topologyKey: kubernetes.io/hostname
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-network-policy
  namespace: project-x
spec:
  podSelector:
    matchLabels:
      app: logger
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          project: x
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: project-x
spec:
  selector:
    project: x
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
---
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: project-x
  labels:
    access: allowed
spec:
  containers:
  - name: nicolaka
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
    ports:
    - containerPort: 80
---
