kubernetes/prod/teams.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worker
  namespace: team-a
spec:
  selector:
    matchLabels:
      app: worker
  serviceName: "nginx"
  replicas: 2
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: worker-sa
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - worker
              topologyKey: topology.kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
  namespace: team-a
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: team-a
  labels:
    access: allowed
spec:
  containers:
  - name: nicolaka
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
    ports:
    - protocol: TCP
      port: 80
